# MathTools

./: CMakeLists.txt  LICENSE  README
src/: .gitignore  About.hpp  BinomialDistPlotter.cpp  BinomialDistPlotter.hpp  BinomialDistTab.cpp  BinomialDistTab.hpp  CMakeLists.txt  Calc.hpp  ComplexPlotter.cpp  ComplexPlotter.hpp  ComplexTab.cpp  ComplexTab.hpp  ExportDialog.cpp  ExportDialog.hpp  ExportImage.hpp  Exportable.hpp  Exporter.cpp  Exporter.hpp  FuncAnaTab.cpp  FuncAnaTab.hpp  FunctionPlotter.cpp  FunctionPlotter.hpp  HypTestPlotter.cpp  HypTestPlotter.hpp  HypTestTab.cpp  HypTestTab.hpp  MathFunction.cpp  MathFunction.hpp  MathTools.cpp  MathTools.hpp  MathToolsConfig.hpp.in  PlotTab.cpp  PlotTab.hpp  Plotter.cpp  Plotter.hpp  PlotterHelper.cpp  PlotterHelper.hpp  about.ui  binomialdist.ui  complextab.ui  (+27 more)
src/qtcolorcombobox/: CMakeLists.txt  qtcolorcombobox.cpp
